[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Alata-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/LabelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/DavidLibre-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 5 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1860.0
margin_bottom = 100.0
alignment = 2

[node name="CloseMenus" type="Button" parent="VBoxContainer/TopRow"]
margin_left = 1760.0
margin_right = 1860.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 1860.0
margin_bottom = 760.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftOptions" type="VBoxContainer" parent="VBoxContainer/SettingsRow"]
margin_right = 300.0
margin_bottom = 630.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20
alignment = 1

[node name="Controls" type="Button" parent="VBoxContainer/SettingsRow/LeftOptions"]
margin_top = 175.0
margin_right = 300.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Controls"

[node name="Sound" type="Button" parent="VBoxContainer/SettingsRow/LeftOptions"]
margin_top = 275.0
margin_right = 300.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Sound"

[node name="Graphics" type="Button" parent="VBoxContainer/SettingsRow/LeftOptions"]
margin_top = 375.0
margin_right = 300.0
margin_bottom = 455.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Graphics"

[node name="ControlsScroller" type="ScrollContainer" parent="VBoxContainer/SettingsRow"]
margin_left = 320.0
margin_right = 1860.0
margin_bottom = 630.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="ControlsContainer" type="HBoxContainer" parent="VBoxContainer/SettingsRow/ControlsScroller"]
margin_right = 1000.0
margin_bottom = 740.0
custom_constants/separation = 20

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer"]
margin_right = 750.0
margin_bottom = 740.0
rect_min_size = Vector2( 750, 60 )
custom_constants/separation = 30

[node name="MoveForward" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_right = 750.0
margin_bottom = 80.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/MoveForward"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Move Forward"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveLeft" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 110.0
margin_right = 750.0
margin_bottom = 190.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/MoveLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Move Left"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveBackwards" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 220.0
margin_right = 750.0
margin_bottom = 300.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/MoveBackwards"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Move Right"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveRight" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 330.0
margin_right = 750.0
margin_bottom = 410.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/MoveRight"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Move Backwards"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 440.0
margin_right = 750.0
margin_bottom = 520.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/Jump"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenMenu" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 550.0
margin_right = 750.0
margin_bottom = 630.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/OpenMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Open Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="TextureRect" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels"]
margin_top = 660.0
margin_right = 750.0
margin_bottom = 740.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Labels/Interact"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Interact"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer"]
margin_left = 770.0
margin_right = 1000.0
margin_bottom = 740.0
rect_min_size = Vector2( 230, 60 )
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="move_forward" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_right = 230.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="move_left" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 110.0
margin_right = 230.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="move_backward" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 220.0
margin_right = 230.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="move_right" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 330.0
margin_right = 230.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="jump" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 440.0
margin_right = 230.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="open_menu" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 550.0
margin_right = 230.0
margin_bottom = 630.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="interact" type="Button" parent="VBoxContainer/SettingsRow/ControlsScroller/ControlsContainer/Controls"]
margin_top = 660.0
margin_right = 230.0
margin_bottom = 740.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0

[node name="SoundScroller" type="ScrollContainer" parent="VBoxContainer/SettingsRow"]
visible = false
margin_left = 320.0
margin_right = 1860.0
margin_bottom = 630.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="SoundContainer" type="HBoxContainer" parent="VBoxContainer/SettingsRow/SoundScroller"]
margin_right = 1000.0
margin_bottom = 630.0
custom_constants/separation = 20

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer"]
margin_right = 750.0
margin_bottom = 630.0
rect_min_size = Vector2( 750, 60 )
custom_constants/separation = 30

[node name="MasterVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_right = 750.0
margin_bottom = 80.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/MasterVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Master Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_top = 110.0
margin_right = 750.0
margin_bottom = 190.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/MusicVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Music Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_top = 220.0
margin_right = 750.0
margin_bottom = 300.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/PlayerVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Player Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_top = 330.0
margin_right = 750.0
margin_bottom = 410.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/EnemyVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Enemy Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_top = 440.0
margin_right = 750.0
margin_bottom = 520.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/ItemVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Item Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherVolume" type="TextureRect" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels"]
margin_top = 550.0
margin_right = 750.0
margin_bottom = 630.0
rect_min_size = Vector2( 750, 80 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Labels/WeatherVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Weather Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="VBoxContainer" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer"]
margin_left = 770.0
margin_right = 1000.0
margin_bottom = 630.0
rect_min_size = Vector2( 230, 60 )
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="master_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_right = 230.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/master_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_top = 110.0
margin_right = 230.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/music_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_top = 220.0
margin_right = 230.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/player_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_top = 330.0
margin_right = 230.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/enemy_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_top = 440.0
margin_right = 230.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/item_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weather_volume_original" type="HScrollBar" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds"]
margin_top = 550.0
margin_right = 230.0
margin_bottom = 630.0
rect_min_size = Vector2( 0, 80 )
step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/SettingsRow/SoundScroller/SoundContainer/Sounds/weather_volume_original"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetsRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 790.0
margin_right = 1860.0
margin_bottom = 890.0
rect_min_size = Vector2( 300, 100 )
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StandardControls" type="Button" parent="VBoxContainer/PresetsRow"]
margin_left = 525.0
margin_right = 775.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Standard Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DvorakControls" type="Button" parent="VBoxContainer/PresetsRow"]
margin_left = 805.0
margin_right = 1055.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Dvorak Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomControls" type="Button" parent="VBoxContainer/PresetsRow"]
margin_left = 1085.0
margin_right = 1335.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Custom Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom Row" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 920.0
margin_right = 1860.0
margin_bottom = 1020.0
rect_min_size = Vector2( 300, 100 )
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer/Bottom Row"]
margin_left = 805.0
margin_right = 1055.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonChanger" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -254.0
margin_right = 311.0
margin_bottom = 254.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ButtonChanger"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Push Button
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="ButtonChanger"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -69.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="ButtonChanger"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -69.0
margin_right = 135.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/TopRow/CloseMenus" to="." method="_on_CloseMenus_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsRow/LeftOptions/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsRow/LeftOptions/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="VBoxContainer/PresetsRow/StandardControls" to="." method="_on_StandardControls_pressed"]
[connection signal="pressed" from="VBoxContainer/PresetsRow/DvorakControls" to="." method="_on_DvorakControls_pressed"]
[connection signal="pressed" from="VBoxContainer/PresetsRow/CustomControls" to="." method="_on_CustomControls_pressed"]
[connection signal="pressed" from="VBoxContainer/Bottom Row/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ButtonChanger/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="ButtonChanger/Cancel" to="." method="_on_Cancel_pressed"]
